Adding Realtime Deployment Wrappers

--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -20,13 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azure_utils.machine_learning.utils import load_configuration, get_workspace_from_config\n",
-    "from azure_utils.utilities import text_to_json\n",
-    "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from azureml.core.model import Model\n",
-    "from notebooks import directory\n",
-    "\n",
-    "import pandas as pd"
+    "from azure_utils.machine_learning.realtime.image import get_or_create_image, lightgbm_test_image_locally\n",
+    "from notebooks import directory"
    ]
   },
   {
@@ -39,80 +34,6 @@
    "source": [
     "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
     "values in the following cell with your information."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg = load_configuration(\"../workspace_conf.yml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "image_name = cfg['image_name']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Get workspace\n",
-    "Load existing workspace from the config file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ws = get_workspace_from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "source": [
-    "## Load model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = 'question_match_model'\n",
-    "\n",
-    "model = Model(ws, name=model_name)\n",
-    "print(model.name, model.version)"
    ]
   },
   {
@@ -208,99 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\n",
-    "    \"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\", \"azureml-contrib-services\", \n",
-    "    \"Microsoft-AI-Azure-Utility-Samples\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lgbmenv = CondaDependencies.create(conda_packages=conda_pack,\n",
-    "                                   pip_packages=requirements)\n",
-    "\n",
-    "with open(\"lgbmenv.yml\", \"w\") as f:\n",
-    "    f.write(lgbmenv.serialize_to_string())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.core.image import ContainerImage\n",
-    "\n",
-    "image_config = ContainerImage.image_configuration(\n",
-    "    execution_script=\"score.py\",\n",
-    "    runtime=\"python\",\n",
-    "    conda_file=\"lgbmenv.yml\",\n",
-    "    description=\"Image with lightgbm model\",\n",
-    "    tags={\n",
-    "        \"area\": \"text\",\n",
-    "        \"type\": \"lightgbm\"\n",
-    "    },\n",
-    "    dependencies=[\n",
-    "        \"./notebooks/data_folder/questions.tsv\"\n",
-    "    ],\n",
-    ")\n",
-    "\n",
-    "image = ContainerImage.create(\n",
-    "    name=image_name,\n",
-    "    # this is the model object\n",
-    "    models=[model],\n",
-    "    image_config=image_config,\n",
-    "    workspace=ws,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "image.wait_for_creation(show_output=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(image.name, image.version)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_version = str(image.version)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can find the logs of image creation in the following location."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.image_build_log_uri"
+    "image = get_or_create_image(model_name='question_match_model')"
    ]
   },
   {
@@ -323,29 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dupes_test_path = directory + '/data_folder/dupes_test.tsv'\n",
-    "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
-    "text_to_score = dupes_test.iloc[0, 4]\n",
-    "text_to_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json_text = text_to_json(text_to_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "image.run(input_data=json_text)"
+    "lightgbm_test_image_locally(image, directory)"
    ]
   },
   {
@@ -386,10 +193,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
