--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Copyright (c) Microsoft Corporation. All rights reserved.\n",
     "\n",
     "Licensed under the MIT License."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Deploying a web service to Azure Kubernetes Service (AKS)\n",
     "In this notebook, we show the following steps for deploying a web service using AzureML:\n",
@@ -19,12 +20,14 @@
     "- Deploy the service\n",
     "- Test the web service\n",
     "- Scale up the service"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -32,6 +35,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
+    "from azure_utils.machine_learning.realtime.kubernetes import get_or_create_aks_service\n",
     "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
     "from azure_utils.machine_learning.utils import load_configuration\n",
     "from azure_utils.utilities import text_to_json\n",
@@ -39,322 +43,146 @@
     "from azureml.core.webservice import Webservice, AksWebservice\n",
     "\n",
     "from notebooks import directory"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
-    "values in the following cell with your information."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": [
-    "cfg = load_configuration(\"../workspace_conf.yml\")"
-   ]
+   }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "AML will use the following information to create an image, provision a cluster and deploy a service. Replace the \n",
+    "values in the following cell with your information."
+   ],
    "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "image_name = cfg['image_name']\n",
-    "aks_service_name = cfg['aks_service_name']\n",
-    "aks_name = cfg['aks_name']\n",
-    "aks_location = cfg['workspace_region']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Get workspace\n",
-    "Load existing workspace from the config file."
-   ]
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "ws = get_workspace_from_config()\n",
-    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = ws.images[image_name]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Restore the statistics data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Provision the AKS Cluster\n",
-    "This is a one time setup. You can reuse this cluster for multiple deployments after it has been created. If you delete \n",
-    "the cluster or the resource group that contains it, then you would have to recreate it. Let's first check if there are \n",
-    "enough cores in the subscription for the cluster ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vm_family = \"Dv2\"\n",
-    "vm_size = \"Standard_D4_v2\"\n",
-    "vm_cores = 8\n",
-    "node_count = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vm_dict = {vm_family: {\"size\": vm_size, \"cores\": vm_cores}}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prov_config = AksCompute.provisioning_configuration(agent_count=node_count,\n",
-    "                                                    vm_size=vm_size,\n",
-    "                                                    location=aks_location)\n",
-    "\n",
-    "# Create the cluster\n",
-    "aks_target = ComputeTarget.create(workspace=ws,\n",
-    "                                  name=aks_name,\n",
-    "                                  provisioning_configuration=prov_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "aks_target.wait_for_completion(show_output=True)\n",
-    "print(aks_target.provisioning_state)\n",
-    "print(aks_target.provisioning_errors)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's check that the cluster is created successfully."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aks_status = aks_target.get_status()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert aks_status == 'Succeeded', 'AKS failed to create'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Deploy web service to AKS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+    "aks_webservice = get_or_create_aks_service()"
+   ],
    "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
-   "source": [
-    "Next, we deploy the web service. We deploy two pods with 1 CPU core each."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_replicas = 2\n",
-    "cpu_cores = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Set the web service configuration\n",
-    "aks_config = AksWebservice.deploy_configuration(num_replicas=num_replicas,\n",
-    "                                                cpu_cores=cpu_cores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aks_service = Webservice.deploy_from_image(\n",
-    "    workspace=ws,\n",
-    "    name=aks_service_name,\n",
-    "    image=image,\n",
-    "    deployment_config=aks_config,\n",
-    "    deployment_target=aks_target,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "aks_service.wait_for_deployment(show_output=True)\n",
-    "print(aks_service.state)"
-   ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can check the logs of the web service with the below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aks_service.get_logs()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Test the web service\n",
     "We now test the web service."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "num_dupes_to_score = 4"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "dupes_test_path = directory + '/data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
     "text_to_score = dupes_test.iloc[0, num_dupes_to_score]\n",
     "text_to_score"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "json_text = text_to_json(text_to_score)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
     "prediction = aks_service.run(input_data=json_text)\n",
     "print(prediction)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Let's try a few more duplicate questions and display their top 3 original matches. Let's first get the scoring URL \n",
     "and API key for the web service."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "scoring_url = aks_service.scoring_uri\n",
     "api_key = aks_service.get_keys()[0]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Write the URI and key to the statistics tracker."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "headers = {\n",
@@ -367,244 +195,361 @@
     "%time r = requests.post(scoring_url, data=json_text, headers=headers) # little longer due to the loading of the model\n",
     "print(r)\n",
     "r.json()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "dupes_to_score = dupes_test.iloc[:5, num_dupes_to_score]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "results = [\n",
     "    requests.post(scoring_url, data=text_to_json(text), headers=headers)\n",
     "    for text in dupes_to_score\n",
     "]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Let's print top 3 matches for each duplicate question."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "[eval(results[i].json())[0:3] for i in range(0, len(results))]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Next let's quickly check what the request response performance is for the deployed model on AKS cluster."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "text_data = list(map(text_to_json, dupes_to_score))  # Retrieve the text data"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "timer_results = list()\n",
     "for text in text_data:\n",
     "    res=%timeit -r 1 -o -q requests.post(scoring_url, data=text, headers=headers)\n",
     "    timer_results.append(res.best)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "timer_results"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Average time taken: {0:4.2f} ms\".format(10 ** 3 * np.mean(timer_results)))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Scaling"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "In this part, we scale the number of pods to make sure we fully utilize the AKS cluster. To connect to the Kubernetes \n",
     "cluster, we will use kubectl, the Kubernetes command-line client. To install, run the following:"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!sudo az aks install-cli"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Next, we will get the credentials to connect to the cluster."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "os.makedirs(os.path.join(os.path.expanduser('~'),'.kube'), exist_ok=True) "
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "config_path = os.path.join(os.path.expanduser('~'),'.kube/config')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "with open(config_path, 'a') as f:\n",
     "    f.write(aks_target.get_credentials()['userKubeConfig'])"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Let's check the nodes and pods of the cluster."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!kubectl get nodes"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!kubectl get pods --all-namespaces"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!kubectl get events"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can now scale up the number of pods."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "new_num_replicas = 10"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!kubectl get namespaces"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!kubectl scale --current-replicas=$num_replicas \\\n",
     "    --replicas=$new_num_replicas {\"deployments/\" + aks_service_name} \\\n",
     "    --namespace azureml-workspace"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!kubectl get pods --all-namespaces"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "!kubectl get deployment"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Next, we will test the [throughput of the web service](06_SpeedTestWebApp.ipynb)."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
