--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -337,7 +337,7 @@
    "source": [
     "# Specify conda dependencies with scikit-learn and pandas\n",
     "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
-    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\", \"Microsoft-AI-Azure-Utility-Samples\"]"
+    "requirements = [\"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\", \"Microsoft-AI-Azure-Utility-Samples==0.3.5\"]"
    ]
   },
   {
