Trying to get test 2 to pass

--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -211,7 +211,7 @@
     "    arguments=args,\n",
     "    run_config=run_config_user_managed,\n",
     ")\n",
-    "run = exp.submit(src)"
+    "# run = exp.submit(src)"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run"
+    "# run"
    ]
   },
   {
@@ -247,7 +247,7 @@
    },
    "outputs": [],
    "source": [
-    "run.wait_for_completion(show_output=True)"
+    "# run.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -627,6 +627,24 @@
    "outputs": [],
    "source": [
     "print(model.name, model.version, model.url, sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model\n",
+    "using Azure Machine Learning."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model\n",
+    "using Azure Machine Learning."
    ]
   },
   {
