Trying to get test 2 to pass

--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -33,9 +33,13 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from typing import Any, Union\n",
     "\n",
     "import pandas as pd\n",
     "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat, random_merge\n",
+    "from numpy.core._multiarray_umath import ndarray\n",
+    "from pandas import Series, DataFrame\n",
+    "from pandas.core.arrays import ExtensionArray\n",
     "from notebooks import directory"
    ]
   },
@@ -567,7 +571,7 @@
    "outputs": [],
    "source": [
     "# First, remove dupes that are questions, then remove duplicated questions and dupes.\n",
-    "dupes = dupes[~dupes.index.isin(questions.index)]\n",
+    "dupes: Union[Union[ExtensionArray, None, Series, ndarray, object, DataFrame], Any] = dupes[~dupes.index.isin(questions.index)]\n",
     "questions = questions[~questions.index.duplicated(keep='first')]\n",
     "dupes = dupes[~dupes.index.duplicated(keep='first')]"
    ]
@@ -1323,10 +1327,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
