Working on test 4

--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azure_utils.machine_learning.realtime.image import get_or_create_image, lightgbm_test_image_locally\n",
+    "from azure_utils.machine_learning.realtime.image import get_or_create_image, lightgbm_test_image_locally, get_model\n",
     "from notebooks import directory"
    ]
   },
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
    "source": [
@@ -130,7 +130,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = get_or_create_image(model_name='question_match_model')"
+    "dependencies=[\"./notebooks/data_folder/questions.tsv\"]\n",
+    "models = [get_model(model_name='question_match_model')]\n",
+    "\n",
+    "image = get_or_create_image(models=models,dependencies=dependencies)"
    ]
   },
   {
@@ -196,10 +199,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
