--- a/notebooks/07_RealTimeScoring.ipynb
+++ b/notebooks/07_RealTimeScoring.ipynb
@@ -75,11 +75,11 @@
     "import ipywidgets as widgets\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from azureml.core.webservice import AksWebservice\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import get_key, find_dotenv\n",
+    "from azure_utils.configuration.project_configuration import ProjectConfiguration\n",
     "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
-    "from azure_utils.utilities import read_questions, text_to_json, get_auth\n",
+    "from azure_utils.utilities import read_questions, text_to_json\n",
+    "from azureml.core.webservice import AksWebservice\n",
+    "\n",
     "from notebooks import directory"
    ]
   },
@@ -99,9 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aks_service_name = get_key(env_path, 'aks_service_name')\n",
-    "aks_service = AksWebservice(ws, name=aks_service_name)\n",
-    "aks_service.name"
+    "project_configuration = ProjectConfiguration(\"project.yml\")\n",
+    "aks_service_name = project_configuration.get_settings('aks_service_name')\n",
+    "aks_service = AksWebservice(ws, name=aks_service_name)\n"
    ]
   },
   {
@@ -729,10 +729,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
