--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -137,86 +137,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can now move on to [Create Image](04_CreateImage.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can now move on to [Develop Scoring Script](03_DevelopScoringScript.ipynb) notebook to train our model using \n",
-    "Azure Machine Learning."
+    "Azure Machine Learning.\n"
    ]
   }
  ],
