--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -23,9 +23,9 @@
    "source": [
     "from urllib.parse import urlparse\n",
     "\n",
+    "from azure_utils.configuration.project_configuration import ProjectConfiguration\n",
     "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
-    "from azureml.core.webservice import AksWebservice\n",
-    "from dotenv import get_key"
+    "from azureml.core.webservice import AksWebservice"
    ]
   },
   {
@@ -51,7 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aks_service_name = get_key(env_path, 'aks_service_name')\n",
+    "project_configuration = ProjectConfiguration(\"project.yml\")\n",
+    "aks_service_name = project_configuration.get_settings('aks_service_name')\n",
     "aks_service = AksWebservice(ws, name=aks_service_name)"
    ]
   },
@@ -238,10 +239,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
