--- a/notebooks/08_TearDown.ipynb
+++ b/notebooks/08_TearDown.ipynb
@@ -23,13 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core.compute import AksCompute\n",
-    "from azureml.core.image import Image\n",
-    "from azureml.core.model import Model\n",
-    "from azureml.core.webservice import AksWebservice\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import get_key, find_dotenv\n",
-    "from azure_utils.utilities import get_auth"
+    "from azure_utils.configuration.project_configuration import ProjectConfiguration\n"
    ]
   },
   {
@@ -38,179 +32,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's get the workspace information."
+    "project_configuration = ProjectConfiguration(\"project.yml\")\n",
+    "resource_group = project_configuration.get_settings('resource_group')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
-    "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's retrieve the web service to delete."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aks_service_name = get_key(env_path, 'aks_service_name')\n",
-    "aks_service = AksWebservice(ws, name=aks_service_name)\n",
-    "print(aks_service.name, aks_service.tags)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's retrieve the image to delete."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_name = get_key(env_path, 'image_name')\n",
-    "image_version = int(get_key(env_path, 'image_version'))\n",
-    "image = Image(ws, name=image_name, version=image_version)\n",
-    "print(image.name, image.version)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's retrieve the model to delete."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = 'question_match_model'\n",
-    "model_version = int(get_key(env_path, 'model_version'))\n",
-    "model = Model(ws, name=model_name, version=model_version)\n",
-    "print(model.name, model.version)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's retrieve the AKS compute to delete."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aks_name = get_key(env_path, 'aks_name')\n",
-    "aks_target = AksCompute(ws, name=aks_name)\n",
-    "print(aks_target.name, aks_target.get_status())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Delete the service, image and model. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "aks_service.delete()\n",
-    "image.delete()\n",
-    "model.delete()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's delete the AKS compute from the workspace. Since we created the cluster through AML, the corresponding cloud \n",
-    "based objects will also be deleted. If the custer was created externally and attached to the workspace, the below \n",
-    "would raise an exception and nothing will be changed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "aks_target.delete()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you also would like to delete the workspace and all experiments in it, you can use the following."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "ws.delete()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, you can delete the resource group with the following."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resource_group = get_key(env_path, 'resource_group')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "!az group delete --yes --name $resource_group"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You have completed the sample."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
@@ -234,10 +83,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
